- updated icon - fixed bug where errror was throw when closing app with settings open - adjusted settings page slightly - updated version number - changed dark mode to default to 100%

--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -53,7 +53,13 @@ body {
 
 .textInput {
     width: 95%;
-    height: 24px;
+    height: 26px;
+    border-radius: 10px;
+}
+.textInputDark {
+    background-color: rgb(27, 27, 27);
+    color: #fff;
+    border: 1px solid #fff;
 }
 
 .settingsFooter {
